fixed problem with profile photo positioning on mobile screen

--- a/assets/style.css
+++ b/assets/style.css
@@ -238,6 +238,17 @@ article p {
         justify-content: space-between;
         align-items: center;
     }
+
+    #about-me article img {
+        border: 3px solid #000;
+        display: block;
+        max-width: 480px;
+        max-height: 550px;
+        min-width: 200px;
+        width: 20%;
+        height: auto;
+        margin-right: 50%;
+    }
         
 }
 
